--- a/src/main/resources/templates/layout/header.mustache
+++ b/src/main/resources/templates/layout/header.mustache
@@ -10,8 +10,17 @@
 	<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 	<link href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.css" rel="stylesheet" />
 	<script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.js"></script>
-	
-	<link rel="icon" href="../../../../../images/brand.png">
+
+	<link rel="icon" href="/images/brand.png">
+
+	<style>
+		@font-face {
+			font-family: 'neurimboGothicRegular';
+			src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2304-01@1.0/neurimboGothicRegular.woff2') format('woff2');
+			font-weight: normal;
+			font-style: normal;
+		}
+	</style>
 
 	{{^sessionComp}}<style></style>{{/sessionComp}}
 
@@ -64,8 +73,9 @@
 
 				<div class="col-4">
 					<div class="d-flex justify-content-center">
-						<a class="text-center flex-grow-1 fw-bold text-decoration-none text-black" href="/">
-							<img src="../../../../../images/goople.png" class="img-thumbnail" alt="구플" width="170px"/>
+						<a class="text-center flex-grow-1 fw-bold text-decoration-none" href="/"
+						style="font-size: 50px; color: #66e3dd">
+							Goople
 						</a>
 					</div>
 				</div>
@@ -88,7 +98,7 @@
 
 				<div class="m-1">
 					<a href="/">
-						<img src="../../../../../images/brand.png" class="img-thumbnail" alt="구플 로고" width="50px" />
+						<img src="/images/brand.png" class="img-thumbnail" alt="구플 로고" width="50px" />
 					</a>
 				</div>
 
