--- a/src/main/resources/templates/layout/header.mustache
+++ b/src/main/resources/templates/layout/header.mustache
@@ -17,20 +17,20 @@
 
 	{{#sessionComp}}{{^sessionComp.compname}}<style>
 		.bg-info {
-			background-color: rgb(205, 239, 255) !important;
+			background-color: pink !important;
 		}
 
 		.border-info {
-			border-color: rgb(205, 239, 255) !important;
+			border-color: pink !important;
 		}
 
 		.btn-info {
-			border-color: rgb(205, 239, 255);
-			background-color: rgb(205, 239, 255) !important;
+			border-color: pink;
+			background-color: pink !important;
 		}
 
 		.btn-info:hover {
-			border-color: rgb(205, 239, 255) !important;
+			border-color: pink !important;
 		}
 	</style>{{/sessionComp.compname}}{{/sessionComp}}
 
