--- a/src/main/resources/templates/comp/joinForm.mustache
+++ b/src/main/resources/templates/comp/joinForm.mustache
@@ -10,7 +10,7 @@
 
 		<div class="mt-3"></div>
 
-		<form action="/comp/join" method="post" enctype="multipart/form-data" onsubmit="valid()">
+		<form action="/comp/join" method="post" enctype="multipart/form-data" onsubmit="return valid()">
 			<div class="d-flex form-group mt-2 mb-2">
 				<input type="hidden" name="role" value=2 />
 				<input type="email" name="email" class="form-control" placeholder="아이디(이메일)" id="email"
