--- a/src/main/resources/templates/user/joinForm.mustache
+++ b/src/main/resources/templates/user/joinForm.mustache
@@ -9,7 +9,7 @@
 
 		<div class="mt-3"></div>
 
-		<form action="/join" method="post" enctype="multipart/form-data" onsubmit="valid()">
+		<form action="/join" method="post" enctype="multipart/form-data" onsubmit="return valid()">
 			<div class="d-flex form-group mt-2 mb-2">
 
 				<div>
