--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -309,7 +309,7 @@
         </div>
       </div>
       <div class="m-2 mb-3">
-        <div class="btn btn-success w-100" onclick="searchAll()">검색하기</div>
+        <div class="btn btn-success w-100" style="background-color: " onclick="searchAll()">검색하기</div>
       </div>
 
       <textarea
