--- a/src/main/resources/templates/comp/allResumeList.mustache
+++ b/src/main/resources/templates/comp/allResumeList.mustache
@@ -6,51 +6,27 @@
 
 
 		<div class="col-9 m-auto">
-			<h1 class=" text-center mt-2 mb-2">입사제안 목록</h1>
+			<h1 class=" text-center mt-2">기업이 받은 모든 이력서</h1>
+			<div class="text-center mb-4"><a href="/comp/{{sessionComp.userId}}/postingList">개별 구인공고 기준으로 보기</a></div>
 
 
-
-		<div class="d-flex justify-content-center mb-2">
-
-			<a href="javascript:void(0);" class="btn btn-info m-2" onclick="openNewWindow('/comp/posting/newWindow/{{posting.id}}')">
-				<div class="">
-					<div class="fw-bold">{{posting.title}}</div>
-					<span class="badge bg-secondary">{{posting.position}}</span>
-					<span class="expiryDate badge bg-black">{{#posting.expiryDate}}{{posting.expiryDate}}{{/posting.expiryDate}}</span>
-				</div>
-				<div class="">
-					{{#posting.postingSkill}}<span class="badge bg-primary me-1">{{skill.skillname}}</span>{{/posting.postingSkill}}
-				</div>
-				<div>
-					{{#posting.career}}<span class="badge bg-success">{{posting.career}}</span>{{/posting.career}}
-					{{#posting.education}}<span class="badge bg-success">{{posting.education}}</span>{{/posting.education}}
-					<span class="badge bg-success">{{posting.region}}</span>
-				</div>
-			</a>
-			
-			<h5 class="align-self-center"> : 이 공고로 입사제안을 했습니다.</h5>
-
-		</div>
-
-			
 
 
 			<table class="table table-bordered">
 				<thead>
-				  <tr class="table-secondary">
-					<th class="text-center" scope="col">No.</th>
-					<th class="text-center" scope="col">이름</th>
-					<th class="text-center" scope="col">이력서</th>
-					<!-- <th class="text-center" scope="col">생년월일</th> -->
-					<th class="text-center" scope="col">경력</th>
-					<th class="text-center" scope="col">학력</th>
-					<th class="text-center" scope="col">보유기술</th>
-					<th class="text-center" scope="col">응답</th>
-				  </tr>
+					<tr class="table-secondary">
+					  <th class="text-center" scope="col">No.</th>
+					  <th class="text-center" scope="col">공고</th>
+					  <th class="text-center" scope="col">받은 이력서</th>
+					  <th class="text-center" scope="col">이름</th>
+					  <th class="text-center" scope="col">경력</th>
+					  <th class="text-center" scope="col">학력</th>
+					  <th class="text-center" scope="col">응답</th>
+					</tr>
 				</thead>
 				<tbody>
 
-					{{^recommendList}}
+					{{^applyCompDTOList}}
 					<tr>
 						<th class="text-center" scope="row">없음</th>
 						<td class="text-center border border-0"></td>
@@ -60,29 +36,32 @@
 						<td class="text-center border border-0"></td>
 						<td class="text-center border-start-0"></td>
 					</tr>
-					{{/recommendList}}
+					{{/applyCompDTOList}}
 					
-					{{#recommendList}}
+					{{#applyCompDTOList}}
 					<tr class="{{statement}}">
 						<th class="text-center" scope="row"><div class="increNumber"></div></th>
-						<td class="text-center">{{resume.user.username}}</td>
-						<td class="text-center"><a href="javascript:void(0);" class="" onclick="openNewWindow('/resume/newWindow/{{resume.id}}')">{{resume.title}}</a></td>
-						<!-- <td class="text-center">{{resume.user.birth}}</td> -->
-						<td class="text-center">{{resume.career}}</td>
-						<td class="text-center">{{resume.grade}}</td>
-						<td class="text-center">
-							<div class="comma">{{#resume.user.userSkillList}}{{skill.skillname}}, {{/resume.user.userSkillList}}</div>
-						</td>
+						<td class="text-center"><a href="javascript:void(0);" class="" onclick="openNewWindow('/comp/posting/newWindow/{{postingId}}')">{{postingTitle}}</a></td>
+						<td class="text-center"><a href="javascript:void(0);" class="" onclick="openNewWindow('/resume/newWindow/{{resumeId}}')">{{resumeTitle}}</a></td>
+						<td class="text-center">{{username}}</td>
+						<td class="text-center">{{resumeCareer}}</td>
+						<td class="text-center">{{resumeGrade}}</td>
+
 						<td class="d-flex justify-content-center statementJS">
 							<input type="hidden" value="{{statement}}">
 							<div class="statementJS2"></div>
-							<form action="/comp/posting/offer/{{id}}/cancel" method="post" class="ms-1">
-								<input type="hidden" name="redirectWhere" value="compOfferList">
-								<input class="btn btn-sm btn-warning p-0 ps-1 pe-1 statementButton" type="submit" value="제안 취소">
+
+							<form action="/comp/posting/apply/{{applyId}}/pass" method="post">
+								<input type="hidden" name="redirectWhere" value="allResumeList">
+								<input class="btn btn-sm btn-success p-0 ps-1 pe-1 me-1 passButton" type="submit" value="합격">
+							</form>
+							<form action="/comp/posting/apply/{{applyId}}/fail" method="post">
+								<input type="hidden" name="redirectWhere" value="allResumeList">
+								<input class="btn btn-sm btn-danger p-0 ps-1 pe-1 failButton" type="submit" value="불합격">
 							</form>
 						</td>
 					</tr>
-					{{/recommendList}}
+					{{/applyCompDTOList}}
 
 
 
@@ -110,17 +89,22 @@
 			statementJS.forEach(element => {
 				let input = element.querySelector("input");
 
-				let statementButton = element.querySelector(".statementButton");
+				if(input.value == "대기"){
+					return;
+				}
+
+				let passButton = element.querySelector(".passButton");
+				let failButton = element.querySelector(".failButton");
 				let statementJS2 = element.querySelector(".statementJS2");
 				
-				if(input.value == "대기"){
-					statementJS2.innerText = "대기";
-				} else if(input.value == "수락") {
-					statementJS2.innerText = "수락함";
-					statementButton.style.display = 'none';
+				if(input.value == "합격"){
+					passButton.style.display = 'none';
+					failButton.style.display = 'none';
+					statementJS2.innerText = "합격";
 				} else {
-					statementJS2.innerText = "거절당함";
-					statementButton.style.display = 'none';
+					passButton.style.display = 'none';
+					failButton.style.display = 'none';
+					statementJS2.innerText = "불합격";
 				}
 			});
 
@@ -191,11 +175,11 @@
 
 			
 			
-			let statementRed = document.querySelectorAll('.거절');
+			let statementRed = document.querySelectorAll('.불합');
 			statementRed.forEach(element => {
 				element.classList.add("table-danger");
 			});
-			let statementGreen = document.querySelectorAll('.수락');
+			let statementGreen = document.querySelectorAll('.합격');
 			statementGreen.forEach(element => {
 				element.classList.add("table-success");
 			});
