--- a/src/main/resources/templates/layout/comp2header.mustache
+++ b/src/main/resources/templates/layout/comp2header.mustache
@@ -7,9 +7,13 @@
 			<div class="m-2"></div>
 			<a href="/comp/main" class="w-100 btn btn-info">마이 페이지</a>
 			<div class="m-2"></div>
-			<a href="/comp/posting/saveForm" class="w-100 btn btn-info">공고 등록</a>
+			<a href="/comp/posting/saveForm" class="w-100 btn btn-info">구인공고 등록</a>
 			<div class="m-2"></div>
-			<a href="/comp/{{sessionComp.userId}}/postingList" class="w-100 btn btn-info">공고 관리</a>
+			<a href="/comp/{{sessionComp.userId}}/postingList" class="w-100 btn btn-info">구인공고 관리</a>
+			<div class="m-2"></div>
+			<a href="/comp/{{sessionComp.userId}}/allOfferList" class="w-100 btn btn-info">입사제안 목록</a>
+			<div class="m-2"></div>
+			<a href="/comp/{{sessionComp.userId}}/allResumeList" class="w-100 btn btn-info">지원자 목록</a>
 			<div class="m-2"></div>
 			<!--
 			<a href="/comp/1/updateForm" class="w-100 btn btn-info">공고 수정</a>
