--- a/src/main/resources/templates/layout/footer.mustache
+++ b/src/main/resources/templates/layout/footer.mustache
@@ -10,11 +10,11 @@
 
 	<div class="d-flex justify-content-center p-3">
 		<div class="ms-5 mt-3" style="font-size: 14px; line-height: 0.6">
-			<p>(주)원티드랩 (대표이사:홍길동) | 서울특별시 송파구 올림픽로 123 롯데월드타워 123층 | 통신판매번호 : 123456</p>
+			<p>구직플랫폼 구플 (대표이사:홍길동) | 서울특별시 송파구 올림픽로 123 롯데월드타워 123층 | 통신판매번호 : 123456</p>
 			<br/>
 			<p>유료직업소개사업등록번호 : (국내) 제123456호 | 사업자등록번호 : 1234 | 02-1234-5678</p>
 			<br/>
-			<p>© Wantedlab, Inc.</p>
+			<p>© Goople, Inc.</p>
 		</div>
 	</div>
 </footer>
