입사제안전체보기2

--- a/src/main/resources/templates/layout/header.mustache
+++ b/src/main/resources/templates/layout/header.mustache
@@ -182,7 +182,7 @@
 								<a class="nav-link text-white" href="/master/help">고객센터</a>
 							</li>
 							<li class="nav-item">
-								{{#sessionAdmin}}<a class="nav-link text-black fw-bold"
+								{{#sessionAdmin}}<a class="nav-link text-danger fw-bold"
 								                    href="/master/admin">관리자전용</a>{{/sessionAdmin}}
 							</li>
 						</ul>
