--- a/src/main/resources/templates/comp/compDetailOnly.mustache
+++ b/src/main/resources/templates/comp/compDetailOnly.mustache
@@ -1,37 +1,113 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<title>구플</title>
-	<meta charset="utf-8"/>
-	<meta name="viewport" content="width=device-width, initial-scale=1"/>
-	<link
-		href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
-		rel="stylesheet"
-	/>
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-	<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-	<link
-		href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.css"
-		rel="stylesheet"
-	/>
-	<script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.js"></script>
-
-    {{^sessionComp}}<style></style>{{/sessionComp}}
-
-    {{#sessionComp}}{{^sessionComp.compname}}<style>
-      .bg-info{ background-color: pink !important; }
-      .border-info{ border-color: pink !important; }
-      .btn-info{ border-color: pink; background-color: pink !important; }
-      .btn-info:hover { border-color: pink !important; }
-    </style>{{/sessionComp.compname}}{{/sessionComp}}
-
-    {{#sessionComp.compname}}<style>
-      .bg-info{ background-color: silver !important; }
-      .border-info{ border-color: silver !important; }
-      .btn-info{ border-color: silver; background-color: silver !important; }
-      .btn-info:hover { border-color: silver !important; }
-    </style>{{/sessionComp.compname}}
-  </head>
+	<head>
+		<title>구플</title>
+		<meta charset="utf-8"/>
+		<meta name="viewport" content="width=device-width, initial-scale=1"/>
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+		<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+		<link href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.css" rel="stylesheet"/>
+		<script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.js"></script>
+	
+		<link rel="icon" href="/images/brand.png">
+	
+		<style>
+			@font-face {
+				font-family: 'Giants-Bold';
+				src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2307-1@1.1/Giants-Bold.woff2') format('woff2');
+				font-weight: 700;
+				font-style: normal;
+			}
+	
+			div {
+				font-family: Giants-Bold;
+			}
+		</style>
+	
+		{{^sessionComp}}
+			<style>
+				.header_title {
+					color: grey;
+				}
+	
+				.bg-info {
+					background-color: grey !important;
+				}
+	
+				.title1 {
+					font-size: 50px;
+				}
+	
+				.header_search {
+					color: white;
+				}
+	
+			</style>
+		{{/sessionComp}}
+		{{#sessionComp}}
+			{{^sessionComp.compname}}
+				<style>
+					.title1 {
+						font-size: 50px;
+						color: pink;
+					}
+	
+					.header_search {
+						background-color: pink;
+					}
+	
+					.bg-info {
+						background-color: pink !important;
+					}
+	
+					.border-info {
+						border-color: pink !important;
+					}
+	
+					.btn-info {
+						border-color: pink;
+						background-color: pink !important;
+					}
+	
+					.btn-info:hover {
+						border-color: pink !important;
+					}
+				</style>
+			{{/sessionComp.compname}}
+		{{/sessionComp}}
+		{{#sessionComp.compname}}
+			<style>
+				.title1 {
+					font-size: 50px;
+					color: #66e3dd;
+				}
+	
+				.header_search {
+					border-style: solid;
+					background-color: #66e3dd;
+				}
+	
+				.bg-info {
+					background-color: #66e3dd !important;
+				}
+	
+				.border-info {
+					border-color: #66e3dd !important;
+				}
+	
+				.btn-info {
+					border-color: #66e3dd;
+					background-color: #66e3dd !important;
+				}
+	
+				.btn-info:hover {
+					border-color: #66e3dd !important;
+				}
+			</style>
+		{{/sessionComp.compname}}
+	
+	</head>
 
 	<body class="d-flex flex-column min-vh-100 d-flex flex-column justify-content-center">
 
